emoji_window/emoji_window.h


// Button click callback type (stdcall)
typedef void (__stdcall *ButtonClickCallback)(int button_id);


// 列表框回调函数类型 (stdcall 调用约定)
typedef void (__stdcall *ListBoxCallback)(HWND hListBox, int index);

    __declspec(dllexport) HWND __stdcall create_window_bytes(const unsigned char* title_bytes, int title_len, int width, int height);


    __declspec(dllexport) int __stdcall create_emoji_button_bytes(
        HWND parent,
        const unsigned char* emoji_bytes,
        int emoji_len,
        const unsigned char* text_bytes,
        int text_len,
        int x, int y, int width, int height,
        UINT32 bg_color
    );


    __declspec(dllexport) void __stdcall set_button_click_callback(ButtonClickCallback callback);

    __declspec(dllexport) void __stdcall set_message_loop_main_window(HWND hwnd);

    __declspec(dllexport) int __stdcall run_message_loop();

    __declspec(dllexport) void __stdcall destroy_window(HWND hwnd);


    // Message box (OK button only, supports Unicode and Emoji)
    __declspec(dllexport) void __stdcall show_message_box_bytes(
        HWND parent,
        const unsigned char* title_bytes,
        int title_len,
        const unsigned char* message_bytes,
        int message_len,
        const unsigned char* icon_bytes,
        int icon_len
    );


    // ========== 标签功能 ==========

    // 创建标签
    __declspec(dllexport) HWND __stdcall CreateLabel(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=左, 1=中, 2=右
        BOOL word_wrap  // 是否换行显示
    );


    // 设置标签文本
    __declspec(dllexport) void __stdcall SetLabelText(
        HWND hLabel,
        const unsigned char* text_bytes,
        int text_len
    );


    // ========== 列表框功能 ==========

    // 创建列表框
    __declspec(dllexport) HWND __stdcall CreateListBox(
        HWND hParent,
        int x, int y, int width, int height,
        BOOL multi_select,
        UINT32 fg_color,
        UINT32 bg_color
    );


    // 添加列表项
    __declspec(dllexport) int __stdcall AddListItem(
        HWND hListBox,
        const unsigned char* text_bytes,
        int text_len
    );


    // 移除列表项
    __declspec(dllexport) void __stdcall RemoveListItem(
        HWND hListBox,
        int index
    );


    // 清空列表框
    __declspec(dllexport) void __stdcall ClearListBox(
        HWND hListBox
    );


    // 获取选中项索引
    __declspec(dllexport) int __stdcall GetSelectedIndex(
        HWND hListBox
    );


    // 设置选中项索引
    __declspec(dllexport) void __stdcall SetSelectedIndex(
        HWND hListBox,
        int index
    );


    // 获取列表项数量
    __declspec(dllexport) int __stdcall GetListItemCount(
        HWND hListBox
    );


    // 获取列表项文本
    __declspec(dllexport) int __stdcall GetListItemText(
        HWND hListBox,
        int index,
        unsigned char* buffer,
        int buffer_size
    );


    // 设置列表框回调
    __declspec(dllexport) void __stdcall SetListBoxCallback(
        HWND hListBox,
        ListBoxCallback callback
    );


    // 启用/禁用列表框
    __declspec(dllexport) void __stdcall EnableListBox(
        HWND hListBox,
        BOOL enable
    );


    // 显示/隐藏列表框
    __declspec(dllexport) void __stdcall ShowListBox(
        HWND hListBox,
        BOOL show
    );


    // 设置列表框位置和大小
    __declspec(dllexport) void __stdcall SetListBoxBounds(
        HWND hListBox,
        int x, int y, int width, int height
    );